syntax = "proto3";
package poktroll.tokenomics;

import "amino/amino.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/pokt-network/poktroll/x/tokenomics/types";

// Params defines the parameters for the module.
message Params {
  option (amino.name) = "poktroll/x/tokenomics/Params";
  option (gogoproto.equal) = true;

  uint64 compute_units_to_tokens_multiplier = 1 [(gogoproto.moretags) = "yaml:\"compute_units_to_tokens_multiplier\""];
}